--- a/main.css
+++ b/main.css
@@ -62,10 +62,14 @@ section{
     flex-direction: column;
     justify-content:center;
 }
+#about h2{
+    margin-bottom: 12px;
 
+}
 #about p{
     padding: 20px 0;
     width: 60%;
+    text-shadow: #F5F6F0 1px 1px 1px;
 }
 
 #about p b{
@@ -94,15 +98,19 @@ section{
 #skills{
     display: flex;
     height: 100%;
+    min-height: 100vh;
     width: 100%;
     margin: auto;
     flex-direction: column;
-    justify-content:flex-start;
+    justify-content:center;
     align-items: center;
 }
 
 #skills h2{
+    display: flex;
     align-self: flex-start;
+    justify-self:flex-start;
+    margin-bottom: 10%;
 }
 
 /* Grid for two or one column */
@@ -115,6 +123,7 @@ section{
 
 #skills h3{
     margin-bottom: 10px;
+    font-size: 20px;
 }
 
 /* Styling for soft skills section */
@@ -123,6 +132,15 @@ section{
     flex-direction: column;
     justify-content:flex-start;
     align-items: flex-start;
+}
+
+#skills .soft-skills p{
+    margin: 10px 0;
+}
+
+#skills .soft-skills p b{
+    font-size: 17.5px;
+    font-style: italic;
 
 }
 
@@ -162,6 +180,10 @@ section{
     flex-direction: column;
     justify-content:center;
 
+}
+
+#experience p{
+    margin-bottom: 15px;
 }
 
 /* Grid for 2x2 or 1x4 */
@@ -333,17 +355,20 @@ section{
 
 
 
+/* ---- Hobbies ---- */
 
+#hobbies{
+    min-height: 100vh;
+    height: fit-content;
 
-
+}
 
 #hobbies .section-content {
     align-self: center;
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr) );
     grid-gap: 10px;
-    margin-top: 40px;
-    padding-bottom: 120px;
+    margin: 40px 0;
 }
 
 
@@ -357,19 +382,20 @@ section{
 
 .img-container {
     background-color: #F5F6F0;
-    width: 200px;
-    height: 200px;
+    width: 95%;
+    height: 240px;
     padding: 5px;
     overflow: hidden;
+    border: 1px solid #F5F6F0;
 }
 
 .img-container img {
     width: 100%; 
     height: 100%; 
     object-fit: cover;
+    transform: scale(1.05);
     transition: transform 0.3s ease; 
 }
-
 
 #hobbies .section-item h3 {
     margin: 10px 0;
@@ -382,28 +408,9 @@ section{
 }
 
 #hobbies .section-item:hover img {
-    transform: scale(1.05);
+    transform: scale(1.1);
     transition: all 0.5s;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 /* ---- Personal Information ---- */
 
@@ -424,11 +431,11 @@ section{
     width: fit-content;
 }
 #personal-info .info li:hover{
-    color: #B75F37;
+    color: #007537;
 }
 
 #personal-info .info li:hover a{
-    color: #B75F37;
+    color: #007537;
 
 }
 
