--- a/mobile.css
+++ b/mobile.css
@@ -142,6 +142,15 @@ main {
     margin-top: 45px;
 }
 
+/* ---- Hobbies ----- */
+#hobbies h2{
+    margin-top: 45px;
+}
+
+#nobbies{
+    height: fit-content;
+}
+
 /* ---- Contact ---- */
 
 /* Center the links */
